# sectrans

./: CMakeLists.txt  CMakePresets.json  README.md  flake.nix
cmake/: cpp_warnings.cmake
docs/: macrohard.c  macrohard.md  post-coding.md  report.md
include/macrosafe/: channel.hpp  client.hpp  common.hpp  encrypted_channel.hpp  message.hpp  server.hpp
include/macrosafe/detail/: client.hpp  common.hpp  message.hpp  server.hpp
include/macrosafe/utils/: base64.hpp  crypto.hpp  dylib.hpp  metaprogramming.hpp  serde.hpp  threading.hpp
include/shared/: json.hpp  message_types.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/macrosafe/: CMakeLists.txt  channel.cpp  client.cpp  encrypted_channel.cpp  message.cpp  server.cpp
src/server/: CMakeLists.txt  auth.cpp  auth.hpp  main.cpp
src/shared/: CMakeLists.txt
tests/: CMakeLists.txt
tests/macrosafe/: CMakeLists.txt  send_and_receive.cpp
